[package]
name = "xsens-mti"
version = "0.2.0"
authors = ["Jon Lamb"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jonlamb-gh/xsens-mti"
description = "An unofficial and incomplete no_std Rust driver for Xsens MTi-series sensors."

[dependencies]
static_assertions = "1.1"
bitfield = "0.13"

[dependencies.byteorder]
version = "1.4"
default-features = false
features = []

[dependencies.err-derive]
version = "0.3"
default-features = false
features = []

[dev-dependencies]
pretty_assertions = "0.6"
serial = "0.4"
ctrlc = "3.1"
