[package]
name = "xsens-mti"
version = "0.5.0"
authors = ["Jon Lamb"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonlamb-gh/xsens-mti"
description = "An unofficial and incomplete no_std Rust driver for Xsens MTi-series sensors."
documentation = "https://docs.rs/xsens-mti"
categories = ["no-std"]
keywords = ["xsens"]
resolver = "2"

[dependencies]
bitfield = "0.13"

[dependencies.static_assertions]
version = "1.1"
default-features = false
features = []

[dependencies.byteorder]
version = "1.4"
default-features = false
features = []

[dependencies.err-derive]
version = "0.3"
default-features = false
features = []

[dev-dependencies]
pretty_assertions = "0.6"
approx = "0.5"
# Stuff for the examples
serial = "0.4"
ctrlc = "3.1"

[dev-dependencies.proptest]
version = "1.0"
default-features = false
features = ["std"]
